--- a/index.html
+++ b/index.html
@@ -20,47 +20,41 @@
     </header>
 
     <div class="hero"></div>
-    <div class="content">
-        <div id="search-engine-optimization" class="assets">
-            <!--remember to add alt to img-->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <main class="content">
+        <section id="search-engine-optimization" class="assets">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Top of a desk with a computer, a coffee, pencils in different colors, and a notebook showing SEO strategies"/>
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
-        </div>
-        <div id="online-reputation-management" class="assets">
-            <!--remember to add alt to img-->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </section>
+        <section id="online-reputation-management" class="assets">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Computer screen showing increased reputation"/>
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
-        </div>
-        <div id="social-media-marketing" class="assets">
-            <!--remember to add alt to img-->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </section>
+        <section id="social-media-marketing" class="assets">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="table used as a type of coworking space, with different electronic devices, and small circular images of the different types of social media"/>
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
-        </div>
-    </div>
+        </section>
+    </main>
     
-    <div class="benefits">
-        <div class="benefit">
+    <aside class="benefits">
+        <section class="benefit">
             <h3>Lead Generation</h3>
-            <!--remember to add alt to img-->
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="icon representing lead generation"/>
             <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
-        </div>
-        <div class="benefit">
+        </section>
+        <section class="benefit">
             <h3>Brand Awareness</h3>
-            <!--remember to add alt to img-->
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="icon representing brand awareness"/>
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
-        </div>
-        <div class="benefit">
+        </section>
+        <section class="benefit">
             <h3>Cost Management</h3>
-            <!--remember to add alt to img-->
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="icon representing cost management"/>
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
-        </div>
-    </div>
+        </section>
+    </aside>
     
     <footer>
         <h3>Made with ❤️️ by Horiseon</h3>
