added comments and updated ReadMe

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon: Marketing Solutions</title>
 </head>
 
 <body>
@@ -19,7 +19,9 @@
         </nav>
     </header>
 
+    <!-- main background picture -->
     <div class="hero"></div>
+    <!-- detailed assets parragraph -->
     <main class="content">
         <section id="search-engine-optimization" class="assets">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Top of a desk with a computer, a coffee, pencils in different colors, and a notebook showing SEO strategies"/>
@@ -27,17 +29,18 @@
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section>
         <section id="online-reputation-management" class="assets">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Computer screen showing increased reputation"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Computer screen showing a charts and graphs about reputation"/>
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </section>
         <section id="social-media-marketing" class="assets">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="table used as a type of coworking space, with different electronic devices, and small circular images of the different types of social media"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Table used as a type of coworking space, with different electronic devices, and small pictures of the different types of social media"/>
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </section>
     </main>
     
+    <!-- sidebar -->
     <aside class="benefits">
         <section class="benefit">
             <h3>Lead Generation</h3>
@@ -56,6 +59,7 @@
         </section>
     </aside>
     
+    <!-- end and cpyright -->
     <footer>
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
